# WisdomOfReddit

./: LICENSE  README.md  pyproject.toml
notebooks/: 01-plot_and_explore_stock.ipynb
scripts/: batch_process_sentiment_range.py  count_subs_with_comments.py  parse.py  parse_dump.py  process_sentiment_range.py  save_financial_data.py  zst_convert.py
src/internetwisdom/analysis/finance/: utils.py
src/internetwisdom/analysis/prescoring/: __init__.py  automatic_labeler.py  classes.py  relevance_dataset.py  relevance_pipeline.py  relevance_predictor.py  state.py  submission_featurizer.py
src/internetwisdom/analysis/sentiment/: __init__.py  aggregation.py  async_extraction.py  batch_orchestration.py  deduplication.py  orchestration.py  prescoring.py  processing.py  prompts.py  state.py  storing.py  utils.py
src/internetwisdom/data/: __init__.py
src/internetwisdom/reddit/: __init__.py
src/internetwisdom/reddit/client/: __init__.py
src/internetwisdom/reddit/comment_processing/: aggregator.py  dump_processor.py
src/wisdomofreddit/: __init__.py  reddit_submission_processor.py
src/wisdomofreddit/analysis/: __init__.py
src/wisdomofreddit/analysis/finance/: utils.py
src/wisdomofreddit/analysis/prescoring/: prompts.py  submission_dataset_builder.py
src/wisdomofreddit/analysis/sentiment/: batch_ingestion.py  consenus_storage.py  extraction.py  loading.py  prescoring.py
src/wisdomofreddit/data/: path_manager.py  storage.py
src/wisdomofreddit/reddit/client/: client.py
src/wisdomofreddit/reddit/comment_processing/: __init__.py  formatter.py  processor.py
