[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WisdomOfReddit"
version = "0.1.0"
description = "Wisdom Of Reddit (Is it?)"
authors = [{ name = "skolchenko" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "yfinance",
  "py_vollib",
  "langchain==0.2.10",
  "langchain_openai==0.1.17",
  "praw",
  "python-dotenv",
  "seaborn",
  "requests_cache",
  "requests_ratelimiter",
  "boto3",
  "tenacity",
  "lxml",
  "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]